tests/snapshots/tokenize__ternary_right_assoc.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nreturn at 2:5\nIntLiteral(1) at 2:12\n? at 2:14\nIntLiteral(2) at 2:16\n: at 2:18\nIntLiteral(0) at 2:20\n? at 2:22\nIntLiteral(3) at 2:24\n: at 2:26\nIntLiteral(4) at 2:28\n; at 2:29\n} at 3:1\nEOF at 4:1\n"
stderr: ""
status: 0
