tests/snapshots/tokenize__token_pasting.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 3:1\nIdentifier(printf) at 3:5\n( at 3:11\nchar at 3:12\n* at 3:17\nIdentifier(fmt) at 3:18\n, at 3:21\n... at 3:23\n) at 3:26\n; at 3:27\nint at 5:1\nIdentifier(main) at 5:5\n( at 5:9\n) at 5:10\n{ at 5:12\nint at 7:5\nIdentifier(xy) at 7:9\n= at 7:12\nIntLiteral(42, None) at 7:14\n; at 7:16\nint at 8:5\nIdentifier(result) at 8:9\n= at 8:16\nIdentifier(xy) at 8:18\n; at 8:20\nIdentifier(printf) at 9:5\n( at 9:11\nStringLiteral(\"%d\n\") at 9:12\n, at 9:18\nIdentifier(result) at 9:20\n) at 9:26\n; at 9:27\nint at 12:5\nIdentifier(var1) at 12:9\n= at 12:14\nIntLiteral(10, None) at 12:16\n; at 12:18\nint at 13:5\nIdentifier(var2) at 13:9\n= at 13:14\nIntLiteral(20, None) at 13:16\n; at 13:18\nint at 14:5\nIdentifier(var3) at 14:9\n= at 14:14\nIntLiteral(30, None) at 14:16\n; at 14:18\nint at 16:5\nIdentifier(a) at 16:9\n= at 16:11\nIdentifier(var1) at 16:13\n; at 16:17\nint at 17:5\nIdentifier(b) at 17:9\n= at 17:11\nIdentifier(var2) at 17:13\n; at 17:17\nint at 18:5\nIdentifier(c) at 18:9\n= at 18:11\nIdentifier(var3) at 18:13\n; at 18:17\nIdentifier(printf) at 20:5\n( at 20:11\nStringLiteral(\"%d\n\") at 20:12\n, at 20:18\nIdentifier(a) at 20:20\n+ at 20:22\nIdentifier(b) at 20:24\n+ at 20:26\nIdentifier(c) at 20:28\n) at 20:29\n; at 20:30\nint at 23:5\nIdentifier(n) at 23:9\n= at 23:11\nIntLiteral(123, None) at 23:13\n; at 23:16\nIdentifier(printf) at 24:5\n( at 24:11\nStringLiteral(\"%d\n\") at 24:12\n, at 24:18\nIdentifier(n) at 24:20\n) at 24:21\n; at 24:22\nreturn at 26:5\nIntLiteral(0, None) at 26:12\n; at 26:13\n} at 27:1\nEOF at 28:1\n"
stderr: ""
status: 0
