tests/snapshots/tokenize__type_conv_mixed.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 3:1\nIdentifier(main) at 3:5\n( at 3:9\n) at 3:10\n{ at 3:12\nchar at 4:5\nIdentifier(c) at 4:10\n= at 4:12\nIntLiteral(10) at 4:14\n; at 4:16\nshort at 5:5\nIdentifier(s) at 5:11\n= at 5:13\nIntLiteral(20) at 5:15\n; at 5:17\nint at 6:5\nIdentifier(i) at 6:9\n= at 6:11\nIntLiteral(30) at 6:13\n; at 6:15\nreturn at 9:5\nIdentifier(c) at 9:12\n+ at 9:14\nIdentifier(s) at 9:16\n+ at 9:18\nIdentifier(i) at 9:20\n; at 9:21\n} at 10:1\nEOF at 11:1\n"
stderr: ""
status: 0
