tests/snapshots/tokenize__typedef.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "void at 2:1\nIdentifier(assert) at 2:6\n( at 2:12\nint at 2:13\nIdentifier(expected) at 2:17\n, at 2:25\nint at 2:27\nIdentifier(actual) at 2:31\n, at 2:37\nchar at 2:39\n* at 2:44\nIdentifier(code) at 2:45\n) at 2:49\n; at 2:50\nint at 3:1\nIdentifier(printf) at 3:5\n( at 3:11\nchar at 3:12\n* at 3:17\nIdentifier(fmt) at 3:18\n, at 3:21\n... at 3:23\n) at 3:26\n; at 3:27\nint at 4:1\nIdentifier(sprintf) at 4:5\n( at 4:12\nchar at 4:13\n* at 4:18\nIdentifier(buf) at 4:19\n, at 4:22\nchar at 4:24\n* at 4:29\nIdentifier(fmt) at 4:30\n, at 4:33\n... at 4:35\n) at 4:38\n; at 4:39\nint at 5:1\nIdentifier(vsprintf) at 5:5\n( at 5:13\nchar at 5:14\n* at 5:19\nIdentifier(buf) at 5:20\n, at 5:23\nchar at 5:25\n* at 5:30\nIdentifier(fmt) at 5:31\n, at 5:34\nvoid at 5:36\n* at 5:41\nIdentifier(ap) at 5:42\n) at 5:44\n; at 5:45\nint at 6:1\nIdentifier(strcmp) at 6:5\n( at 6:11\nchar at 6:12\n* at 6:17\nIdentifier(p) at 6:18\n, at 6:19\nchar at 6:21\n* at 6:26\nIdentifier(q) at 6:27\n) at 6:28\n; at 6:29\nint at 7:1\nIdentifier(strncmp) at 7:5\n( at 7:12\nchar at 7:13\n* at 7:18\nIdentifier(p) at 7:19\n, at 7:20\nchar at 7:22\n* at 7:27\nIdentifier(q) at 7:28\n, at 7:29\nlong at 7:31\nIdentifier(n) at 7:36\n) at 7:37\n; at 7:38\nint at 8:1\nIdentifier(memcmp) at 8:5\n( at 8:11\nchar at 8:12\n* at 8:17\nIdentifier(p) at 8:18\n, at 8:19\nchar at 8:21\n* at 8:26\nIdentifier(q) at 8:27\n, at 8:28\nlong at 8:30\nIdentifier(n) at 8:35\n) at 8:36\n; at 8:37\nvoid at 9:1\nIdentifier(exit) at 9:6\n( at 9:10\nint at 9:11\nIdentifier(n) at 9:15\n) at 9:16\n; at 9:17\nint at 10:1\nIdentifier(vsprintf) at 10:5\n( at 10:13\n) at 10:14\n; at 10:15\nlong at 11:1\nIdentifier(strlen) at 11:6\n( at 11:12\nchar at 11:13\n* at 11:18\nIdentifier(s) at 11:19\n) at 11:20\n; at 11:21\nvoid at 12:1\n* at 12:6\nIdentifier(memcpy) at 12:7\n( at 12:13\nvoid at 12:14\n* at 12:19\nIdentifier(dest) at 12:20\n, at 12:24\nvoid at 12:26\n* at 12:31\nIdentifier(src) at 12:32\n, at 12:35\nlong at 12:37\nIdentifier(n) at 12:42\n) at 12:43\n; at 12:44\nvoid at 13:1\n* at 13:6\nIdentifier(memset) at 13:7\n( at 13:13\nvoid at 13:14\n* at 13:19\nIdentifier(s) at 13:20\n, at 13:21\nint at 13:23\nIdentifier(c) at 13:27\n, at 13:28\nlong at 13:30\nIdentifier(n) at 13:35\n) at 13:36\n; at 13:37\ntypedef at 15:1\nint at 15:9\nIdentifier(MyInt) at 15:13\n, at 15:18\nIdentifier(MyInt2) at 15:20\n[ at 15:26\nIntLiteral(4, None) at 15:27\n] at 15:28\n; at 15:29\ntypedef at 16:1\nint at 16:9\n; at 16:12\nint at 18:1\nIdentifier(main) at 18:5\n( at 18:9\n) at 18:10\n{ at 18:12\nIdentifier(assert) at 19:3\n( at 19:9\nIntLiteral(1, None) at 19:10\n, at 19:11\n( at 19:13\n{ at 19:14\ntypedef at 19:16\nint at 19:24\nIdentifier(t) at 19:28\n; at 19:29\nIdentifier(t) at 19:31\nIdentifier(x) at 19:33\n= at 19:34\nIntLiteral(1, None) at 19:35\n; at 19:36\nIdentifier(x) at 19:38\n; at 19:39\n} at 19:41\n) at 19:42\n, at 19:43\nStringLiteral(\"({ typedef int t; t 1=1; 1; })\") at 19:45\n) at 19:77\n; at 19:78\nIdentifier(assert) at 20:3\n( at 20:9\nIntLiteral(1, None) at 20:10\n, at 20:11\n( at 20:13\n{ at 20:14\ntypedef at 20:16\nstruct at 20:24\n{ at 20:31\nint at 20:32\nIdentifier(a) at 20:36\n; at 20:37\n} at 20:38\nIdentifier(t) at 20:40\n; at 20:41\nIdentifier(t) at 20:43\nIdentifier(x) at 20:45\n; at 20:46\nIdentifier(x) at 20:48\n. at 20:49\nIdentifier(a) at 20:50\n= at 20:51\nIntLiteral(1, None) at 20:52\n; at 20:53\nIdentifier(x) at 20:55\n. at 20:56\nIdentifier(a) at 20:57\n; at 20:58\n} at 20:60\n) at 20:61\n, at 20:62\nStringLiteral(\"({ typedef struct {int a;} t; t 1; 1.a=1; 1.a; })\") at 20:64\n) at 20:115\n; at 20:116\nIdentifier(assert) at 21:3\n( at 21:9\nIntLiteral(1, None) at 21:10\n, at 21:11\n( at 21:13\n{ at 21:14\ntypedef at 21:16\nint at 21:24\nIdentifier(t) at 21:28\n; at 21:29\nIdentifier(t) at 21:31\nIdentifier(t) at 21:33\n= at 21:34\nIntLiteral(1, None) at 21:35\n; at 21:36\nIdentifier(t) at 21:38\n; at 21:39\n} at 21:41\n) at 21:42\n, at 21:43\nStringLiteral(\"({ typedef int t; t t=1; t; })\") at 21:45\n) at 21:77\n; at 21:78\nIdentifier(assert) at 22:3\n( at 22:9\nIntLiteral(2, None) at 22:10\n, at 22:11\n( at 22:13\n{ at 22:14\ntypedef at 22:16\nstruct at 22:24\n{ at 22:31\nint at 22:32\nIdentifier(a) at 22:36\n; at 22:37\n} at 22:38\nIdentifier(t) at 22:40\n; at 22:41\n{ at 22:43\ntypedef at 22:45\nint at 22:53\nIdentifier(t) at 22:57\n; at 22:58\n} at 22:60\nIdentifier(t) at 22:62\nIdentifier(x) at 22:64\n; at 22:65\nIdentifier(x) at 22:67\n. at 22:68\nIdentifier(a) at 22:69\n= at 22:70\nIntLiteral(2, None) at 22:71\n; at 22:72\nIdentifier(x) at 22:74\n. at 22:75\nIdentifier(a) at 22:76\n; at 22:77\n} at 22:79\n) at 22:80\n, at 22:81\nStringLiteral(\"({ typedef struct {int a;} t; { typedef int t; } t 2; 2.a=2; 2.a; })\") at 22:83\n) at 22:153\n; at 22:154\nIdentifier(assert) at 23:3\n( at 23:9\nIntLiteral(4, None) at 23:10\n, at 23:11\n( at 23:13\n{ at 23:14\ntypedef at 23:16\nIdentifier(t) at 23:24\n; at 23:25\nIdentifier(t) at 23:27\nIdentifier(x) at 23:29\n; at 23:30\nsizeof at 23:32\n( at 23:38\nIdentifier(x) at 23:39\n) at 23:40\n; at 23:41\n} at 23:43\n) at 23:44\n, at 23:45\nStringLiteral(\"({ typedef t; t 4; sizeof(4); })\") at 23:47\n) at 23:81\n; at 23:82\nIdentifier(assert) at 24:3\n( at 24:9\nIntLiteral(3, None) at 24:10\n, at 24:11\n( at 24:13\n{ at 24:14\nIdentifier(MyInt) at 24:16\nIdentifier(x) at 24:22\n= at 24:23\nIntLiteral(3, None) at 24:24\n; at 24:25\nIdentifier(x) at 24:27\n; at 24:28\n} at 24:30\n) at 24:31\n, at 24:32\nStringLiteral(\"({ MyInt 3=3; 3; })\") at 24:34\n) at 24:55\n; at 24:56\nIdentifier(assert) at 25:3\n( at 25:9\nIntLiteral(16, None) at 25:10\n, at 25:12\n( at 25:14\n{ at 25:15\nIdentifier(MyInt2) at 25:17\nIdentifier(x) at 25:24\n; at 25:25\nsizeof at 25:27\n( at 25:33\nIdentifier(x) at 25:34\n) at 25:35\n; at 25:36\n} at 25:38\n) at 25:39\n, at 25:40\nStringLiteral(\"({ MyInt2 16; sizeof(16); })\") at 25:42\n) at 25:72\n; at 25:73\nIdentifier(printf) at 27:3\n( at 27:9\nStringLiteral(\"OK\n\") at 27:10\n) at 27:16\n; at 27:17\nreturn at 28:3\nIntLiteral(0, None) at 28:10\n; at 28:11\n} at 29:1\nEOF at 30:1\n"
stderr: ""
status: 0
